# courses_fastapi

./: .gitignore  README.md  docker-compose.yml  init_conf.sh  main.py  models.py  pyproject.toml  settings.py
courses/: locustfile.py  main.py  pyproject.toml  settings.py  stock_market.py
courses/routers/: api.py
courses/utils/: stock_market.py
migrations/models/: 0_20240210225634_init.py
routers/: api.py
storage_courses/: models.py  pyproject.toml  rabbit.py  settings.py  update_storage.py
storage_courses/command/: update_storage.py
storage_courses/migrations/models/: 0_20240220221408_init.py
storage_courses/utils/: stock_market.py
utils/: client.py  stock_market.py
